# taskApp

./: .env  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 9a5b30c1ca2c_initconf.py
app/: database.py  main.py  models.py  schemas.py
app/core/: config.py  security.py
app/routers/: auths.py  groups.py  tasks.py  users.py
frontend/: group.html  groups.html  index.html  login.html  register.html
frontend/static/: app.js  styles.css
